# iz

./: .gitignore  .lcovrc  README.md  main.c  meson.build
backend/: meson.build
backend/llvm/: meson.build
backend/llvm/include/: codegen.h  map.h
backend/llvm/src/: codegen.c  map.c
backend/llvm/src/llvm/: backend.c  backend.h
backend/llvm/test/: codegen.c  map.c  meson.build
backend/llvm/test/llvm/: backend.c
docs/: readme.md
docs/samples/: v0.0.2.iz  v0.0.3.iz  v0.0.4.iz  v0.0.5.iz  v0.0.6.iz  v0_0_1.iz
lib/: meson.build
lib/include/ast/: ast.h  declaration.h  expression.h  statement.h  type.h  unit.h
lib/include/common/: array.h  span.h
lib/include/parser/: lexer.h  parser.h
lib/include/sema/: scope.h  sema.h
lib/src/ast/: ast.h  ast_print.c  ast_print.h  compilation.c  compilation.h  declaration.c  declaration.h  expression.c  expression.h  statement.c  statement.h  type.c  type.h  unit.c  unit.h
lib/src/common/: array.c  array.h  common.h  mem.h  rbtree.h  source.c  source.h  span.c  span.h
lib/src/parser/: lexer.c  lexer.h  parser.c  parser.h
lib/src/sema/: scope.c  scope.h  sema.c  sema.h
lib/test/: meson.build
lib/test/ast/: declaration.c  expression.c  statement.c  type.c  unit.c
lib/test/common/: array.c  source.c  span.c
lib/test/parser/: lexer.c  parser.c
lib/test/sema/: scope.c  sema.c
samples/: meson.build
scripts/: build.sh  build_clang.sh  build_gcc.sh  coverage.sh  coverage_clang.sh  coverage_gcc.sh
src/: iz.c  meson.build
test/: meson.build
test/llvm/: a001.c
